# Depth_gt_projection_system

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  ImageProcessing  ImageProcessing_Debug  Makefile  main_OLD.cpp  main_OLD_2.cpp  settings_OLD.hpp
.cache/clangd/index/: main.cpp.AF692E3986466E2D.idx  object_recognition.cpp.56A03B54DB4F0A09.idx  object_recognition.hpp.C2B856C0FA7771F0.idx  templategen.cpp.46E7078E51D44621.idx  templategen.hpp.321FC9E39CDE5058.idx  utils.hpp.3199A94FC2A03313.idx
Config/: a.json  config.json  configOLD.json
include/: sl_utils.hpp
src/: converter.hpp  main.cpp  object_recognition.cpp  object_recognition.hpp  settings.hpp  templategen.cpp  templategen.hpp  utils.cpp  utils.hpp
src/headers/: camera.hpp  converter.hpp  object_recognition.hpp  settings.hpp  templategen.hpp  utils.hpp
src/impl/: object_recognition.cpp  templategen.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp
